2004-10-04  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlWriter.cs : WriteNode(XPathNavigator,bool) should check null arg.
	  For attribute nodes, it should not use WriteSubtree() which does not
	  support attribute nodes.

2004-09-20  Gert Driesen <drieseng@users.sourceforge.net>
	
	* XmlValidatingReader.cs: Added deprecation message.

2004-09-14  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlTextWriter.cs : Close() should not Flush() when the output is
	  already closed. bug #65918 is fixed.

2004-09-12  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlTextWriter.cs : CloseOutput must be true by default.

2004-09-08  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlWriter.cs, XmlTextWriter.cs, XmlWriterSettings.cs :
	  Implemented CheckCharacters and CloseOutput support.

2004-09-08  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlReader.cs : evidence is always provided.
	* XmlWriter.cs, XmlTextWriter.cs :
	  added support for ConformanceLevel and OmitXmlDeclaration.

2004-09-08  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlTextReader.cs : Console.WriteLine() injected :(
	* XmlTextWriter.cs : It it partly supports XmlWriterSettings.
	* XmlWriter.cs : implemented Create().
	* XmlWriterSettings.cs : removed EncodeXmlBinary (deprecated).

2004-09-07  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlFactory.cs : removed (obsolete).

2004-09-07  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlNamespaceManager.cs : GetNamespacesInScope() ignored default
	  namespace when scope is .ExcludeXml or .All.
	* XmlReader.cs : Implemented ValueType, SchemaInfo, ReadAsObject().
	  Fixed ReadTypedValue() to call ReadValueAs().

2004-09-07  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlNamespaceManager.cs : Fixed GetNamespacesInScope() that returned
	  inconsistent namespace pairs.

2004-09-07  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlReader.cs, XmlTextReader.cs :
	  Added NET_2_0 CheckCharacters support.

2004-09-06  Atsushi Enomoto  <atsushi@ximian.com>
